K8S/alertmanager/ingress-nginx.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "testing"
  name: "alertmanager"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "alertmanager.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "alertmanager"
                port:
                  number: 9093
